--- a/vue/package.json
+++ b/vue/package.json
@@ -1,27 +1,36 @@
 {
   "name": "ynpc",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A Vue.js project",
   "author": "",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "lint": "eslint --ext .js,.vue src",
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "e2e": "node test/e2e/runner.js",
+    "test": "npm run unit && npm run e2e",
+    "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "build": "node build/build.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "classlist-polyfill": "^1.2.0",
+    "cropperjs": "^1.4.3",
     "element-ui": "^2.4.11",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "qrcodejs2": "0.0.2",
+    "uikit": "^3.0.3",
     "vant": "^1.6.5",
     "vue": "^2.5.2",
     "vue-amap": "^0.5.8",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuikit": "^0.8.10"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -35,8 +44,12 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "chai": "^4.2.0",
     "chalk": "^2.0.1",
+    "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.1",
+    "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "css-split-webpack-plugin": "^0.2.6",
     "eslint": "^4.15.0",
@@ -52,10 +65,26 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "inject-loader": "^3.0.0",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
+    "karma-sinon-chai": "^1.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "^2.0.2",
+    "less": "^3.9.0",
+    "mocha": "^6.0.2",
+    "nightwatch": "^1.0.19",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
@@ -63,12 +92,14 @@
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
+    "selenium-server": "^3.141.59",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "sinon": "^7.2.7",
+    "sinon-chai": "^2.8.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
-    "vue-particles": "^1.0.9",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
