--- a/vue/package.json
+++ b/vue/package.json
@@ -17,6 +17,7 @@
     "babel-polyfill": "^6.26.0",
     "classlist-polyfill": "^1.2.0",
     "cropperjs": "^1.4.3",
+    "echarts": "^4.2.1",
     "element-ui": "^2.4.11",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
