--- a/node/package.json
+++ b/node/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "formidable": "^1.2.1",
+    "multer": "^1.4.1",
     "mysql": "mysqljs/mysql"
   },
   "devDependencies": {
